display odd or even number in html

--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -5,6 +5,6 @@
     <title>Number Odd or Even</title>
 </head>
 <body>
-    <h1>Number: {{ n }} is {{ odd_or_even }}</h1>
+    <h1>Number: {{ values.number }} is {{ values.even_or_odd }}</h1>
 </body>
 </html>
